data/derived/comb/progs/unify/prog4770.ml.out
Characters 348-349:
  | Squared e -> eval(e ** 2)
                      ^
Error: This expression has type expr but an expression was expected of type
         float
